--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <!-- Герой -->
         <section class="hero"> 
         <!-- Swiper -->
-        <div class="swiper-container">
+        <div class="swiper-container hero-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide slide_1">
+                <div class="swiper-slide hero_slide slide_1">
                     <div class="hero_text_wrapper container">
                     <p class="hero_pretitle">Промислове</p>
                     <h1 class="hero_title">Кліматичне Обладнання</h1>
@@ -73,7 +73,7 @@
                     <button class="button hero_button">ДЕТАЛЬНІШЕ</button>
                 </div>
                 </div>
-                <div class="swiper-slide slide_2">
+                <div class="swiper-slide hero_slide slide_2">
                     <div class="hero_text_wrapper container">
                         <p class="hero_pretitle">Промислове</p>
                         <h1 class="hero_title">Кліматичне Обладнання</h1>
@@ -83,7 +83,7 @@
                         <button class="button hero_button">ДЕТАЛЬНІШЕ</button>
                 </div>
                 </div>
-                <div class="swiper-slide slide_3">
+                <div class="swiper-slide hero_slide slide_3">
                     <div class="hero_text_wrapper container">
                         <p class="hero_pretitle">Промислове</p>
                         <h1 class="hero_title">Кліматичне Обладнання</h1>
@@ -93,7 +93,7 @@
                         <button class="button hero_button">ДЕТАЛЬНІШЕ</button>
             </div>
             </div>
-                <div class="swiper-slide slide_4">
+                <div class="swiper-slide hero_slide slide_4">
                     <div class="hero_text_wrapper container">
                         <p class="hero_pretitle">Промислове</p>
                         <h1 class="hero_title">Кліматичне Обладнання</h1>
@@ -164,31 +164,31 @@
                 популярність в деяких випадках.</p>
                 <button class="button products_button">ДЕТАЛЬНІШЕ</button>
 </div>
-        </li>
+         </li>
         <li class="products_list_item product_2">
             <div class="products_list_title_wrapper">
                 <h3 class="products_list_title">ВОДЯНІ ТЕПЛОНОСІЇ</h3>
             </div>
-            <div class="products_list_hover_wrapper" hidden>
+            <div class="products_list_hover_wrapper">
                 <div class="products_image_wrapper">
                     <img src="./images/cooler.png" alt="нагрівач">
                 </div>
-                    <h3 class="products_hover_title">ЕЛЕКТРИЧНИЙ НАГРІВ</h3>
+                    <h3 class="products_hover_title">ВОДЯНІ ТЕПЛОНОСІЇ</h3>
                     <p class="products_hover_description">Використання електрики в якості
                         джерела нагріву отримало власну
                         популярність в деяких випадках.</p>
                     <button class="button products_button">ДЕТАЛЬНІШЕ</button>
                 </div>
-           </li>
-           <li class="products_list_item product_3">
+            </li> 
+            <li class="products_list_item product_3">
             <div class="products_list_title_wrapper">
                 <h3 class="products_list_title">ПОВІТРЯНІ ЗАВІСИ</h3>
             </div>
-            <div class="products_list_hover_wrapper" hidden>
+            <div class="products_list_hover_wrapper">
                 <div class="products_image_wrapper">
                     <img src="./images/cooler.png" alt="нагрівач">
                 </div>
-                    <h3 class="products_hover_title">ЕЛЕКТРИЧНИЙ НАГРІВ</h3>
+                    <h3 class="products_hover_title">ПОВІТРЯНІ ЗАВІСИ</h3>
                     <p class="products_hover_description">Використання електрики в якості
                         джерела нагріву отримало власну
                         популярність в деяких випадках.</p>
@@ -199,63 +199,118 @@
                 <div class="products_list_title_wrapper">
                     <h3 class="products_list_title">КАМЕРИ ПРИПЛИВУ</h3>
                 </div>
-                <div class="products_list_hover_wrapper" hidden>
+                <div class="products_list_hover_wrapper">
                     <div class="products_image_wrapper">
                         <img src="./images/cooler.png" alt="нагрівач">
                     </div>
-                        <h3 class="products_hover_title">ЕЛЕКТРИЧНИЙ НАГРІВ</h3>
+                        <h3 class="products_hover_title">КАМЕРИ ПРИПЛИВУ</h3>
                         <p class="products_hover_description">Використання електрики в якості
                             джерела нагріву отримало власну
                             популярність в деяких випадках.</p>
                         <button class="button products_button">ДЕТАЛЬНІШЕ</button>
                     </div>
-            </li>
+            </li> 
     </ul>
     </div>
 </section>
-<!-- <section>
-    <h2>НАМ ДОВІРЯЮТЬ</h2>
-    <div>
-        <ul>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-        </ul>
-    </div>
-    <div>
-        <ul>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-            <li><img src="" alt=""></li>
-        </ul>
-    </div>
+<!-- Партнери -->
+ <section class="partners container">
+    <h2 class="partners_title">НАМ ДОВІРЯЮТЬ</h2>
+    <!-- <div id="carousel" class="partners_carousel">
+        <button class="arrow prev">⇦</button>
+        <div class="partners_gallery">
+            <ul class=" partners_list list">
+                <li class="partners_list_item"><a href=""><img src="./images/logo_remak.png" alt="лого-remak"></a></li>
+                <li class="partners_list_item"><a href=""></a><img src="./images/logo_reflex.png" alt="лого-reflex"></a></li>
+                <li class="partners_list_item"><a href=""></a><img src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></a></li>
+                <li class="partners_list_item"><a href=""></a><img src="./images/logo_kermi.png" alt="лого-kermi"></a></li>
+                <li class="partners_list_item"><a href=""><img src="./images/logo_remak.png" alt="лого-remak"></a></li>
+                <li class="partners_list_item"><a href=""><img src="./images/logo_reflex.png" alt="лого-reflex"></a></li>
+                <li class="partners_list_item"><a href=""><img src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></a></li>
+                <li class="partners_list_item"><a href=""><img src="./images/logo_kermi.png" alt="лого-kermi"></a></li>
+            </ul>
+        </div>
+        <button class="arrow next">⇨</button>
+    </div> -->
+   <!-- <div>
+                <ul class="partners_list list">
+                    <li class="partners_list_item"><img src="./images/logo_remak.png" alt="лого-remak"></li>
+                    <li class="partners_list_item"><img src="./images/logo_reflex.png" alt="лого-reflex"></li>
+                    <li class="partners_list_item"><img src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></li>
+                    <li class="partners_list_item"><img src="./images/logo_kermi.png" alt="лого-kermi"></li>
+                </ul>
+            </div>
+            <div>
+            <ul class="partners_list list">
+                <li class="partners_list_item"><img src="./images/logo_remak.png" alt="лого-remak"></li>
+                <li class="partners_list_item"><img src="./images/logo_reflex.png" alt="лого-reflex"></li>
+                <li class="partners_list_item"><img src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></li>
+                <li class="partners_list_item"><img src="./images/logo_kermi.png" alt="лого-kermi"></li>
+            </ul>
+        </div> -->
+        <div class="swiper-container laptop container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide partners_laptop slide_1">
+                    <ul class="partners_list list">
+                        <li class="partners_list_item"><img class="partners_image" src="./images/logo_remak.png" alt="лого-remak"></li>
+                        <li class="partners_list_item"><img  class="partners_image" src="./images/logo_reflex.png" alt="лого-reflex"></li>
+                        <li class="partners_list_item"><img  class="partners_image" src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></li>
+                        <li class="partners_list_item"><img  class="partners_image" src="./images/logo_kermi.png" alt="лого-kermi"></li>
+                    </ul></div>
+                <div class="swiper-slide slide_2">
+                    <ul class="partners_list list">
+                        <li class="partners_list_item"><img  class="partners_image" src="./images/logo_remak.png" alt="лого-remak"></li>
+                        <li class="partners_list_item"><img  class="partners_image" src="./images/logo_reflex.png" alt="лого-reflex"></li>
+                        <li class="partners_list_item"><img  class="partners_image" src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></li>
+                        <li class="partners_list_item"><img  class="partners_image" src="./images/logo_kermi.png" alt="лого-kermi"></li>
+                    </ul></div>
+            </div>
+            <!-- Add Arrows -->
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+        </div>
+        <div class="swiper-container mobile container">
+            <div class="swiper-wrapper mobile_wrapper">
+                <div class="swiper-slide partners_mobile"><img src="./images/logo_remak.png" alt="лого-remak"></div>
+                <div class="swiper-slide partners_mobile"><img src="./images/logo_reflex.png" alt="лого-reflex"></div>
+                <div class="swiper-slide partners_mobile"><img src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></div>
+                <div class="swiper-slide partners_mobile"><img src="./images/logo_kermi.png" alt="лого-kermi"></div>
+        </div>
+        <!-- Add Arrows -->
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        </div>
 </section>
-    </main>
-<footer>
-    <img src="" alt="logo_down">
-    <nav>
-        <ul>
-            <li>Компанія</li>
-            <li>Продукція</li>
-            <li>Рішеня</li>
-            <li>Підтримка</li>
-            <li>Питання та відповіді</li>
-            <li>Контакти</li>
+    </main> 
+<footer class="footer container">
+    <div class="footer_logo_wrapper">
+    <img src="./images/logo_footer.png" alt="logo_down" width=39 height=31>
+    </div>
+    <nav class="footer_navigation">
+        <ul class="footer_navigation_list list">
+            <li class="footer_navigation_list_item"><a class="footer_navigation_list_link" href="">Компанія</a></li>
+            <li class="footer_navigation_list_item"><a class="footer_navigation_list_link" href="">Продукція</a></li>
+            <li class="footer_navigation_list_item"><a class="footer_navigation_list_link" href="">Рішеня</a></li>
+            <li class="footer_navigation_list_item"><a class="footer_navigation_list_link" href="">Підтримка</a></li>
+            <li class="footer_navigation_list_item"><a class="footer_navigation_list_link" href="">Питання та відповіді</a></li>
+            <li class="footer_navigation_list_item"><a class="footer_navigation_list_link" href="">Контакти</a></li>
         </ul>
     </nav>
-    <div>
-        <a href="facebook">facebook</a>
-        <a href="youtube">youtube</a>
+    <div class="footer_sosial_links">
+        <a class="footer_sosial facebook_link" href="facebook" aria-label="посилання на фейсбук сторінку"></a>
+        <a  class="footer_sosial youtube_link" href="youtube" aria-label="посилання на ютуб сторінку"></a>
 </div>
-<div>
-    <p>&copy;TREVENT, 2019. Дизайн розробляли ONCA</p>
+<p class="footer_copyright">
+    <span class="trevent_text">&copy;TREVENT, 2019.</span><span class="geral_text">Дизайн розробляли</span><span class="onca_text"> ONCA</span></p>
+
+</footer>  
+<div class="container">
+    <a class="page_scroll_up" href=""></a>
 </div>
-</footer>  --> 
 <script src="./index.js" type="module"></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-<script src="./js/swiper.js"></script>
+<script src="./js/swiper_hero.js"></script>
+<script src="./js/swiper_partners.js"></script>
 </body>
 </html>
