--- a/index.html
+++ b/index.html
@@ -216,48 +216,16 @@
 <!-- Партнери -->
  <section class="partners container">
     <h2 class="partners_title">НАМ ДОВІРЯЮТЬ</h2>
-    <!-- <div id="carousel" class="partners_carousel">
-        <button class="arrow prev">⇦</button>
-        <div class="partners_gallery">
-            <ul class=" partners_list list">
-                <li class="partners_list_item"><a href=""><img src="./images/logo_remak.png" alt="лого-remak"></a></li>
-                <li class="partners_list_item"><a href=""></a><img src="./images/logo_reflex.png" alt="лого-reflex"></a></li>
-                <li class="partners_list_item"><a href=""></a><img src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></a></li>
-                <li class="partners_list_item"><a href=""></a><img src="./images/logo_kermi.png" alt="лого-kermi"></a></li>
-                <li class="partners_list_item"><a href=""><img src="./images/logo_remak.png" alt="лого-remak"></a></li>
-                <li class="partners_list_item"><a href=""><img src="./images/logo_reflex.png" alt="лого-reflex"></a></li>
-                <li class="partners_list_item"><a href=""><img src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></a></li>
-                <li class="partners_list_item"><a href=""><img src="./images/logo_kermi.png" alt="лого-kermi"></a></li>
-            </ul>
-        </div>
-        <button class="arrow next">⇨</button>
-    </div> -->
-   <!-- <div>
-                <ul class="partners_list list">
-                    <li class="partners_list_item"><img src="./images/logo_remak.png" alt="лого-remak"></li>
-                    <li class="partners_list_item"><img src="./images/logo_reflex.png" alt="лого-reflex"></li>
-                    <li class="partners_list_item"><img src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></li>
-                    <li class="partners_list_item"><img src="./images/logo_kermi.png" alt="лого-kermi"></li>
-                </ul>
-            </div>
-            <div>
-            <ul class="partners_list list">
-                <li class="partners_list_item"><img src="./images/logo_remak.png" alt="лого-remak"></li>
-                <li class="partners_list_item"><img src="./images/logo_reflex.png" alt="лого-reflex"></li>
-                <li class="partners_list_item"><img src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></li>
-                <li class="partners_list_item"><img src="./images/logo_kermi.png" alt="лого-kermi"></li>
-            </ul>
-        </div> -->
-        <div class="swiper-container laptop container">
+  <div class="swiper-container laptop container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide partners_laptop slide_1">
+                <div class="swiper-slide partners_laptop partners_slide_1">
                     <ul class="partners_list list">
                         <li class="partners_list_item"><img class="partners_image" src="./images/logo_remak.png" alt="лого-remak"></li>
                         <li class="partners_list_item"><img  class="partners_image" src="./images/logo_reflex.png" alt="лого-reflex"></li>
                         <li class="partners_list_item"><img  class="partners_image" src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></li>
                         <li class="partners_list_item"><img  class="partners_image" src="./images/logo_kermi.png" alt="лого-kermi"></li>
                     </ul></div>
-                <div class="swiper-slide slide_2">
+                <div class="swiper-slide partners_laptop partners_slide_2">
                     <ul class="partners_list list">
                         <li class="partners_list_item"><img  class="partners_image" src="./images/logo_remak.png" alt="лого-remak"></li>
                         <li class="partners_list_item"><img  class="partners_image" src="./images/logo_reflex.png" alt="лого-reflex"></li>
