--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
                         <li class="partners_list_item"><img  class="partners_image" src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></li>
                         <li class="partners_list_item"><img  class="partners_image" src="./images/logo_kermi.png" alt="лого-kermi"></li>
                     </ul></div>
-            </div>
-            <!-- Add Arrows -->
+            </div> 
+              <!-- Add Arrows  -->
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
         </div>
@@ -243,12 +243,12 @@
                 <div class="swiper-slide partners_mobile"><img src="./images/logo_reflex.png" alt="лого-reflex"></div>
                 <div class="swiper-slide partners_mobile"><img src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></div>
                 <div class="swiper-slide partners_mobile"><img src="./images/logo_kermi.png" alt="лого-kermi"></div>
-        </div>
+        </div> -->
         <!-- Add Arrows -->
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
-        </div>
-</section>
+        </div> 
+</section> 
     </main> 
 <footer class="footer container">
     <div class="footer_logo_wrapper">
