--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <div class="swiper-slide partners_mobile"><img src="./images/logo_reflex.png" alt="лого-reflex"></div>
                 <div class="swiper-slide partners_mobile"><img src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></div>
                 <div class="swiper-slide partners_mobile"><img src="./images/logo_kermi.png" alt="лого-kermi"></div>
-        </div> -->
+        </div> 
         <!-- Add Arrows -->
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
@@ -281,4 +281,4 @@
 <script src="./js/swiper_hero.js"></script>
 <script src="./js/swiper_partners.js"></script>
 </body>
-</html>
+</ht
