Adds final version

--- a/index.html
+++ b/index.html
@@ -220,17 +220,17 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide partners_laptop partners_slide_1">
                     <ul class="partners_list list">
-                        <li class="partners_list_item"><img class="partners_image" src="./images/logo_remak.png" alt="лого-remak"></li>
-                        <li class="partners_list_item"><img  class="partners_image" src="./images/logo_reflex.png" alt="лого-reflex"></li>
-                        <li class="partners_list_item"><img  class="partners_image" src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></li>
-                        <li class="partners_list_item"><img  class="partners_image" src="./images/logo_kermi.png" alt="лого-kermi"></li>
+                        <li class="partners_list_item"><a href=""><img class="partners_image" src="./images/logo_remak.png" alt="лого-remak"></a></li>
+                        <li class="partners_list_item"><a href=""><img  class="partners_image" src="./images/logo_reflex.png" alt="лого-reflex"></a></li>
+                        <li class="partners_list_item"><a href=""><img  class="partners_image" src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></a></li>
+                        <li class="partners_list_item"><a href=""><img  class="partners_image" src="./images/logo_kermi.png" alt="лого-kermi"></a></li>
                     </ul></div>
                 <div class="swiper-slide partners_laptop partners_slide_2">
                     <ul class="partners_list list">
-                        <li class="partners_list_item"><img  class="partners_image" src="./images/logo_remak.png" alt="лого-remak"></li>
-                        <li class="partners_list_item"><img  class="partners_image" src="./images/logo_reflex.png" alt="лого-reflex"></li>
-                        <li class="partners_list_item"><img  class="partners_image" src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></li>
-                        <li class="partners_list_item"><img  class="partners_image" src="./images/logo_kermi.png" alt="лого-kermi"></li>
+                        <li class="partners_list_item"><a href=""><img  class="partners_image" src="./images/logo_remak.png" alt="лого-remak"></a></li>
+                        <li class="partners_list_item"><a href=""><img  class="partners_image" src="./images/logo_reflex.png" alt="лого-reflex"></a></li>
+                        <li class="partners_list_item"><a href=""><img  class="partners_image" src="./images/logo_kg_elektronik.png" alt="лого-elektronik"></a></li>
+                        <li class="partners_list_item"><a href=""><img  class="partners_image" src="./images/logo_kermi.png" alt="лого-kermi"></a></li>
                     </ul></div>
             </div> 
               <!-- Add Arrows  -->
