Adds final version 2

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 <!-- Партнери -->
  <section class="partners container">
     <h2 class="partners_title">НАМ ДОВІРЯЮТЬ</h2>
-  <div class="swiper-container laptop container">
+  <div class="swiper-container laptop">
             <div class="swiper-wrapper">
                 <div class="swiper-slide partners_laptop partners_slide_1">
                     <ul class="partners_list list">
@@ -237,7 +237,7 @@
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
         </div>
-        <div class="swiper-container mobile container">
+        <div class="swiper-container mobile">
             <div class="swiper-wrapper mobile_wrapper">
                 <div class="swiper-slide partners_mobile"><img src="./images/logo_remak.png" alt="лого-remak"></div>
                 <div class="swiper-slide partners_mobile"><img src="./images/logo_reflex.png" alt="лого-reflex"></div>
